crates/analyzer/tests/snapshots/errors__bad_visibility.snap
---
source: crates/analyzer/tests/errors.rs
expression: error_string_ingot(&path)
---
error: type MyInt is private
  ┌─ compile_errors/bad_visibility/src/main.fe:1:11
  │
1 │ use foo::{MyInt, MY_CONST, MyStruct, MyTrait, my_func, MyContract, MyEnum }
  │           ^^^^^ MyInt

error: constant MY_CONST is private
  ┌─ compile_errors/bad_visibility/src/main.fe:1:18
  │
1 │ use foo::{MyInt, MY_CONST, MyStruct, MyTrait, my_func, MyContract, MyEnum }
  │                  ^^^^^^^^ MY_CONST

error: struct MyStruct is private
  ┌─ compile_errors/bad_visibility/src/main.fe:1:28
  │
1 │ use foo::{MyInt, MY_CONST, MyStruct, MyTrait, my_func, MyContract, MyEnum }
  │                            ^^^^^^^^ MyStruct

error: trait MyTrait is private
  ┌─ compile_errors/bad_visibility/src/main.fe:1:38
  │
1 │ use foo::{MyInt, MY_CONST, MyStruct, MyTrait, my_func, MyContract, MyEnum }
  │                                      ^^^^^^^ MyTrait

error: function my_func is private
  ┌─ compile_errors/bad_visibility/src/main.fe:1:47
  │
1 │ use foo::{MyInt, MY_CONST, MyStruct, MyTrait, my_func, MyContract, MyEnum }
  │                                               ^^^^^^^ my_func

error: type MyContract is private
  ┌─ compile_errors/bad_visibility/src/main.fe:1:56
  │
1 │ use foo::{MyInt, MY_CONST, MyStruct, MyTrait, my_func, MyContract, MyEnum }
  │                                                        ^^^^^^^^^^ MyContract

error: type MyEnum is private
  ┌─ compile_errors/bad_visibility/src/main.fe:1:68
  │
1 │ use foo::{MyInt, MY_CONST, MyStruct, MyTrait, my_func, MyContract, MyEnum }
  │                                                                    ^^^^^^ MyEnum

error: the type `MyInt` is private
  ┌─ compile_errors/bad_visibility/src/main.fe:7:33
  │
7 │     pub fn priv_type_alias() -> MyInt {
  │                                 ^^^^^ this type is not `pub`
  │
  ┌─ compile_errors/bad_visibility/src/foo.fe:1:6
  │
1 │ type MyInt = i32
  │      ----- `MyInt` is defined here
  │
  = `MyInt` can only be used within `foo`
  = Hint: use `pub` to make `MyInt` visible from outside of `foo`

error: the type `MyInt` is private
  ┌─ compile_errors/bad_visibility/src/main.fe:8:16
  │
8 │         let x: MyInt = 1
  │                ^^^^^ this type is not `pub`
  │
  ┌─ compile_errors/bad_visibility/src/foo.fe:1:6
  │
1 │ type MyInt = i32
  │      ----- `MyInt` is defined here
  │
  = `MyInt` can only be used within `foo`
  = Hint: use `pub` to make `MyInt` visible from outside of `foo`

error: the constant `MY_CONST` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:13:16
   │
13 │         return MY_CONST
   │                ^^^^^^^^ this constant is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:3:7
   │
 3 │ const MY_CONST: MyInt = 1
   │       -------- `MY_CONST` is defined here
   │
   = `MY_CONST` can only be used within `foo`
   = Hint: use `pub` to make `MY_CONST` visible from outside of `foo`

error: the struct `MyStruct` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:17:16
   │
17 │         let s: MyStruct = MyStruct(x: 1)
   │                ^^^^^^^^ this struct is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:7:8
   │
 7 │ struct MyStruct {
   │        -------- `MyStruct` is defined here
   │
   = `MyStruct` can only be used within `foo`
   = Hint: use `pub` to make `MyStruct` visible from outside of `foo`

error: the struct `MyStruct` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:17:27
   │
17 │         let s: MyStruct = MyStruct(x: 1)
   │                           ^^^^^^^^ this struct is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:7:8
   │
 7 │ struct MyStruct {
   │        -------- `MyStruct` is defined here
   │
   = `MyStruct` can only be used within `foo`
   = Hint: use `pub` to make `MyStruct` visible from outside of `foo`

error: Can not call private constructor of struct `MyStruct` 
  ┌─ compile_errors/bad_visibility/src/foo.fe:8:5
  │
8 │     x: i32
  │     ^^^^^^ Field `x` is private
  │
  = Suggestion: implement a method `new(...)` on struct `MyStruct` to call the constructor and return the struct

error: the function `my_func` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:21:9
   │
21 │         my_func()
   │         ^^^^^^^ this function is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:11:4
   │
11 │ fn my_func() {}
   │    ------- `my_func` is defined here
   │
   = `my_func` can only be used within `foo`
   = Hint: use `pub` to make `my_func` visible from outside of `foo`

error: the type `MyEnum` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:25:16
   │
25 │         let e: MyEnum = MyEnum::Some
   │                ^^^^^^ this type is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:17:6
   │
17 │ enum MyEnum {
   │      ------ `MyEnum` is defined here
   │
   = `MyEnum` can only be used within `foo`
   = Hint: use `pub` to make `MyEnum` visible from outside of `foo`

error: the type `MyContract` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:29:16
   │
29 │         let _: MyContract = MyContract(addr)
   │                ^^^^^^^^^^ this type is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:13:10
   │
13 │ contract MyContract {
   │          ---------- `MyContract` is defined here
   │
   = `MyContract` can only be used within `foo`
   = Hint: use `pub` to make `MyContract` visible from outside of `foo`

error: the type `MyContract` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:29:29
   │
29 │         let _: MyContract = MyContract(addr)
   │                             ^^^^^^^^^^ this type is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:13:10
   │
13 │ contract MyContract {
   │          ---------- `MyContract` is defined here
   │
   = `MyContract` can only be used within `foo`
   = Hint: use `pub` to make `MyContract` visible from outside of `foo`

error: the type `MyContract` is private
   ┌─ compile_errors/bad_visibility/src/main.fe:30:9
   │
30 │         MyContract.create(ctx, 1)
   │         ^^^^^^^^^^ this type is not `pub`
   │
   ┌─ compile_errors/bad_visibility/src/foo.fe:13:10
   │
13 │ contract MyContract {
   │          ---------- `MyContract` is defined here
   │
   = `MyContract` can only be used within `foo`
   = Hint: use `pub` to make `MyContract` visible from outside of `foo`

error: the trait `MyTrait` is private
  ┌─ compile_errors/bad_visibility/src/foo.fe:5:7
  │
5 │ trait MyTrait {}
  │       ^^^^^^^ this trait is not `pub`
  │
  = `MyTrait` can only be used within `foo`
  = Hint: use `pub trait MyTrait` to make `MyTrait` visible from outside of `foo`


